[tool.poetry]
name = "imagehash"
version = "5.0.1"
description = "perceptive image hashing utilities"
authors = ["Matt Stancliff <matt@genges.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9,<3.10"
numpy = "^1.21.0"
scipy = "^1.7.0"

# If you have difficulty installing pillow-simd on OS X with zlib installed via brew,
# make sure you are exporting pkg config correctly:
# export PKG_CONFIG_PATH="/usr/local/opt/zlib/lib/pkgconfig:/usr/local/opt/jpeg-turbo/lib/pkgconfig"
Pillow-SIMD = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
